// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpinionHeader should show a full featured opinion header 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fef9f5",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "paddingBottom": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://d2cf1ljtg904cv.cloudfront.net/issue/media/phone/media/path/to/image.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0,0,0,.25)",
            "width": "100%",
          },
          Object {
            "aspectRatio": 1.5,
            "marginBottom": 3,
          },
        ]
      }
    />
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#121212",
              "flexShrink": 0,
              "fontFamily": "GHGuardianHeadline-Regular",
              "fontSize": 28,
              "lineHeight": 30,
            },
            Object {
              "marginRight": 24,
              "marginTop": 3,
            },
          ]
        }
      >
        <RNSVGSvgView
          bbHeight={25}
          bbWidth={38}
          fill="none"
          height={25}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 25,
                "width": 38,
              },
            ]
          }
          width={38}
        >
          <RNSVGGroup
            fill={null}
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M8.864.333h7.74c-.932 6.867-1.756 13.6-2.114 21.134H.3C1.59 14.133 4.277 7.2 8.864.333zm18.024 0h7.633c-.825 6.867-1.756 13.6-2.114 21.134H18.252c1.47-7.334 4.05-14.267 8.636-21.134z"
              fill={
                Array [
                  0,
                  4279374354,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        Theresa May makes final speech as PM
        <Text
          style={
            Array [
              Object {
                "color": "#121212",
              },
              Object {
                "fontFamily": "GTGuardianTitlepiece-Bold",
                "width": "100%",
              },
            ]
          }
        >
          

          Andrew Sparrow
        </Text>
      </Text>
    </View>
  </View>
  <RNSVGSvgView
    bbHeight={16}
    bbWidth="100%"
    fill="none"
    height={16}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 16,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={null}
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={0}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={4}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={8}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "paddingBottom": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignContent": "stretch",
              "alignItems": "stretch",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "flexShrink": 0,
                "fontFamily": "GuardianTextEgyptian-Reg",
                "fontSize": 17,
                "lineHeight": 21,
              },
              Object {
                "color": "#333333",
              },
            ]
          }
        >
          Rolling coverage of the day’s political developments as they happen
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OpinionHeader should show opinion header without an image or a kicker 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fef9f5",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "paddingBottom": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#121212",
              "flexShrink": 0,
              "fontFamily": "GHGuardianHeadline-Regular",
              "fontSize": 28,
              "lineHeight": 30,
            },
            Object {
              "marginRight": 24,
              "marginTop": 3,
            },
          ]
        }
      >
        <RNSVGSvgView
          bbHeight={25}
          bbWidth={38}
          fill="none"
          height={25}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 25,
                "width": 38,
              },
            ]
          }
          width={38}
        >
          <RNSVGGroup
            fill={null}
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M8.864.333h7.74c-.932 6.867-1.756 13.6-2.114 21.134H.3C1.59 14.133 4.277 7.2 8.864.333zm18.024 0h7.633c-.825 6.867-1.756 13.6-2.114 21.134H18.252c1.47-7.334 4.05-14.267 8.636-21.134z"
              fill={
                Array [
                  0,
                  4279374354,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        Theresa May makes final speech as PM
        <Text
          style={
            Array [
              Object {
                "color": "#121212",
              },
              Object {
                "fontFamily": "GTGuardianTitlepiece-Bold",
                "width": "100%",
              },
            ]
          }
        >
          

          Andrew Sparrow
        </Text>
      </Text>
    </View>
  </View>
  <RNSVGSvgView
    bbHeight={16}
    bbWidth="100%"
    fill="none"
    height={16}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 16,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={null}
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={0}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={4}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={8}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "paddingBottom": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignContent": "stretch",
              "alignItems": "stretch",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "flexShrink": 0,
                "fontFamily": "GuardianTextEgyptian-Reg",
                "fontSize": 17,
                "lineHeight": 21,
              },
              Object {
                "color": "#333333",
              },
            ]
          }
        >
          Rolling coverage of the day’s political developments as they happen
        </Text>
      </View>
    </View>
  </View>
</View>
`;
